CTSWebApp/wwwroot/styles/app.css
.p0 {
    padding:0px;
}

.pl10{
    padding-left:10px;
}

.pr5{
    padding-right:5px;
}


.headerAlign{
    display:flex;
    align-items:center;
}

.white {
    color:white;
}

.font-small{
    font-size:small
}

.h40{
   height:40px; 
}

.w90p{
    width:90%;
}

.w200{
    width:200px;
}

.w150 {
    width: 150px;
}

.w300 {
    width: 300px;
}

.w90p{
    width:90%!important;
}

.hide {
    display:none;
}

.left{
    float:left;
}

.right {
    float:right;
}

.ml10{
    margin-left:10px;
}
.mt10{
    margin-top:10px;
}

.mt5 {
    margin-top: 5px;
}

.selectWidth {
    width: auto;
}

.errorText {
    color:red;
    font-weight:bold;
}

.successText {
    color: #28a745;
    font-weight: bold;
}

/*styling for radio button*/
/* Custom Radio Button Start*/

/*.radiotextsty {
    color: #A5A4BF;
    font-size: 18px;
}

.customradio {
    display: block;
    position: relative;
    padding-left: 30px;
    margin-bottom: 0px;
    cursor: pointer;
    font-size: 18px;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}*/

    /* Hide the browser's default radio button */
    /*.customradio input {
        position: absolute;
        opacity: 0;
        cursor: pointer;
    }*/

/* Create a custom radio button */
/*.checkmark {
    position: absolute;
    top: 0;
    left: 0;
    height: 22px;
    width: 22px;
    background-color: white;
    border-radius: 50%;
    border: 1px solid #BEBEBE;
}*/

/* On mouse-over, add a grey background color */
/*.customradio:hover input ~ .checkmark {
    background-color: transparent;
}*/

/* When the radio button is checked, add a blue background */
/*.customradio input:checked ~ .checkmark {
    background-color: white;
    border: 1px solid #BEBEBE;
}*/

/* Create the indicator (the dot/circle - hidden when not checked) */
/*.checkmark:after {
    content: "";
    position: absolute;
    display: none;
}*/

/* Show the indicator (dot/circle) when checked */
/*.customradio input:checked ~ .checkmark:after {
    display: block;
}*/

/* Style the indicator (dot/circle) */
/*.customradio .checkmark:after {
    top: 2px;
    left: 2px;
    width: 16px;
    height: 16px;
    border-radius: 50%;
    background: #A3A0FB;
}*/

/* Custom Radio Button End*/

/* Navbar styles */


.navbar-default {
    background-color: #094166;
}

.bgcolorMenu {
    background-color: #e3f2fd;
}

#menuBar .navbar-nav li > a {
    text-transform: capitalize;
    color: #094166;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    transition: background-color .2s, color .2s;
}

    #menuBar .navbar-nav li > a:hover, #menuBar .navbar-nav li > a:focus {
        background-color: #75A2C0;
        border-top-left-radius: 5px;
        border-top-right-radius: 5px;
        color: #fff;
    }

#menuBar .navbar-nav li.active > a {
    background-color: #094166;
    border-top-left-radius:5px;
    border-top-right-radius:5px;
    color: #fff;
}

.bgBar {
    background-color: #b7defa;
}

.bgTableHead {
    background-color: #1192ee;
}

.br5{
    border-radius:5px;
}

.m5 {
    margin:5px;
}

.p5 {
    padding:5px;
}

.fw{
   color:white;
}



@media only screen and (max-width: 800px) {

    /* Force table to not be like tables anymore */
    #no-more-tables table,
    #no-more-tables thead,
    #no-more-tables tbody,
    #no-more-tables th,
    #no-more-tables td,
    #no-more-tables tr {
        display: block;
    }

        /* Hide table headers (but not display: none;, for accessibility) */
        #no-more-tables thead tr {
            position: absolute;
            top: -9999px;
            left: -9999px;
        }

    #no-more-tables tr {
        border: 1px solid #094166;
    }

    #no-more-tables td {
        /* Behave  like a "row" */
        border: none;
        border-bottom: 1px solid #eee;
        position: relative;
        padding-left: 50%;
        white-space: normal;
        text-align: left;
        height:40px;
    }

        #no-more-tables td:before {
            /* Now like a table header */
            position: absolute;
            /* Top/left values mimic padding */
            top: 6px;
            left: 6px;
            width: 45%;
            padding-right: 10px;
            white-space: nowrap;
            text-align: left;
            font-weight: bold;
        }

        /*
	Label the data
	*/
        #no-more-tables td:before {
            content: attr(data-title);
            height:40px;
        }
}


    /*
header {
    background-color:lightgray
}

body {
    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-size:small;
}

input {
    width:250px;
}

textarea {
    width:250px;
}

menu li {
    display: inline;
}

    menu li ::after {
        content: "";
    }

    menu li:last-of-type::after {
        content: "";
    }

    */

